@@ -4622,7 +4622,7 @@ void
 chkNMIDBuffer(Buffer *buf)
 {
     static char *url_like_pat[] = {
-	"<[^<> 	][^<> 	]*@[A-z0-9\\.\\-_]+>",
+	"<[!-;=?-~]+@[A-z0-9\\.\\-_]+>",
 	NULL,
     };
     int i;
